package version1;

public class Foglia extends Categoria{

    public Foglia(String _nome, String _descrizione) {
        super(_nome, _descrizione);
    }

    public String toString(){
        return super.toString();
    }
}
