@startuml
skinparam ClassAttributeIconSize 0

class Applicazione{
- hierarchies: Map<String, Gerarchia>
+ <<constructor>> Applicazione()
+ addGerarchia(String, Gerarchia): void
+ isHierarchyNameTaken(String): boolean
+ getHierarchies(): Map<String, Gerarchia>
+ setHierarchies(Map<String, Gerarchia>): void
+ getHierarchy(String): Gerarchia
+ saveData(): void
+ prepareDirectoryStructure(): void
+ createNewHierarchy(View): void
}

class CampoNativo{
- obbligatorio: boolean
- type: Tipo
+ <<constructor>> CampoNativo(boolean, Tipo)
+ isObbligatorio(): boolean
+ getType(): Tipo
}

enum Tipo{
STRING
}

abstract class User{
- username: String
- hashedPw: String
+ <<constructor>> User(String, String)
+ getUsername(): String
+ getHashedPw(): String
- {static}hashPassword(String): String
+ authenticate(String): boolean
+ changePassword(String): void
+ changeUsername(String): void
}

class Configuratore{
+ <<constructor>> Configuratore(String, String)
}

class Gerarchia{
- root: Categoria
+ <<constructor>> Gerarchia(Categoria)
+ getRoot(): Categoria
+ toString(): String
}

abstract class Categoria{
- nome: String
- descrizione: String
- campiNativi: Map<String, CampoNativo>
+ <<constructor>> Categoria(String, String)
+ getNome(): String
+ setNome(Nome): void
+ getDescrizione(): String
+ setDescrizione(String): void
+ getCampiNativi(): Map<String, CampoNativo>
+ setCampiNativi(Map<String, CampoNativo>): void
+ toString(): String
+ isNameTaken(String): boolean
- {static}isNameTaken(Categoria, String): boolean
+ isStructureValid(): boolean
- {static}isStructureValid(Categoria): boolean
- generaCampiNativiRadice(): Map<String, CampoNativo>
+ generaCampiNativi(Categoria, View): Map<String, CampoNativo>
}

class CategoriaEntry{
- cat: Categoria
- father: Nodo
- displayName: String
+ <<constructor>> CategoriaEntry(Categoria, Nodo, String)
+ getCat(): Categoria
+ getFather(): Nodo
+ getDisplayName(): String
+ {static}catAsNode(Categoria): Nodo
+ asNode(): Nodo
}

class Foglia{
+ <<constructor>> Foglia(String, String)
+ toString(): String
}

class Nodo{
- categorieFiglie: List<Categoria>
+ <<constructor>> Nodo(String, String)
+ getCategorieFiglie(): List<Categoria>
+ removeChild(Categoria): void
+ addChild(Categoria): void
+ toString(): String
}

class View{
+ <<constructor>> View()
+ interactionMessage(InteractionMessage): void
+ askUsername(): String
+ askNewUsername(): String
+ askPassword(): String
+ message(String): void
+ errorMessage(ErrorMessage): void
+ in(String): String
+ inLine(String): String
+ askCustomPassword(): String
+ communicateCredentials(String, String): void
+ selectConfiguratoreAction(): String
+ askDescription(): String
+ askCategoryName(): String
+ insertFieldName(): String
+ yesOrNoQuestion(String): boolean
+ findCategory(Categoria): CategoriaEntry
- getCategoriesAsList(Categoria): List<CategoriaEntry>
- getCategoriesAsList(Categoria, Nodo, List<CategoriaEntry>, String): List<CategoriaEntry>
}

enum ErrorMessage{
E_CREDENTIALS_ERROR
E_DIFFERENT_PASSWORDS
E_USERNAME_TAKEN
E_UNREGISTERED_USER
E_WRONG_PASSWORD
E_ILLICIT_CHOICE
E_EXISTING_ROOT_CATEGORY
E_EXISTING_NAME_IN_HIERARCHY
E_UNAUTHORIZED_CHOICE

- message: String
<<constructor>> ErrorMessage(String)
+ getMessage(): String
}

enum InteractionMessage{
CUSTOMIZE_CREDENTIALS
EXIT_MESSAGE
SAVED_CORRECTLY
AT_LEAST_TWO_CHILDREN
CHOOSE_CATEGORY

- message: String
<<constructor>> InteractionMessage(String)
+ getMessage(): String
}

class UserDataStore{
- {static}STD_USERNAME_LEN: int = 10
- {static}STD_PW_LEN: int = 10
- userMap: Map<String, User>
+ <<constructor>> UserDataStore()
+ isUsernameTaken(String): boolean
+ registerNewConfiguratore(String, String): void
+ updateUser(String, String, String): void
- {static}generateRandomPassword(int): String
- {static}generateRandomString(int): String
+ isLoginCorrect(String, String): boolean
+ isEmpty(): boolean
+ getUserMap(): Map<String, User>
+ setUserMap(Map<String, User>): void
+ addNewConfiguratore(View): void
+ customizeConfiguratore(String, View): void
+ save(): void
+ load(): void
}

class Controller{
+ dataStore: UserDataStore
- view: View
- app: Applicazione
+ <<constructor>> Controller()
+ firstAccessAsConfiguratore(): void
+ secondAccessAsConfiguratore(String): void
- useAsConfiguratore(): void
}

class Main{
+ {static}main(String): void
}

CampoNativo +-- Tipo
View +-- InteractionMessage
View +-- ErrorMessage
View ..> CategoriaEntry
View ..> Nodo
Applicazione ..> CategoriaEntry
Applicazione ..> View
Applicazione ..> Nodo
Main ..> View
View ..> Categoria
UserDataStore ..> View
UserDataStore ..> Configuratore
Main ..> User
Main ..> Configuratore
Main ..> Controller
Main ..> UserDataStore
Controller ..> Gerarchia
Controller ..> Categoria
Applicazione ..> Categoria
Applicazione ..> Foglia
UserDataStore --> "0.. * "  User
Controller --> "0.. 1 " UserDataStore
Controller --> "0.. 1 " View
Controller --> "0.. 1 " Applicazione
CategoriaEntry --> "0.. 1 " Categoria
CategoriaEntry --> "0.. 1 " Nodo
Categoria --> "2.. * " CampoNativo
Gerarchia --> "0.. 1 " Categoria
Applicazione --> "0.. * " Gerarchia
Nodo --> "2.. * " Categoria
Categoria <|-- Nodo
Categoria <|-- Foglia
User <|-- Configuratore

@enduml